--- a/css/main.css
+++ b/css/main.css
@@ -2635,3 +2635,74 @@ body {
   background-size: cover;
   background-position: 50% 50%;
 }
+/* Styles for the contact form */
+  form {
+  background-color: #bcdce0;
+  padding: 20px;
+  text-align: center;
+  }
+  
+  label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: left;
+  }
+  
+  input,
+  textarea {
+  border: 2px solid #333;
+  padding: 10px;
+  width: 100%;
+  }
+  
+  button[type="submit"] {
+  background-color: #333;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease-in-out;
+  }
+  
+  button[type="submit"]:hover {
+  background-color: #f2f2f2;
+  color: #333;
+  }
+  
+  /* Styles for the contact info */
+  .contact-info {
+  background-color: #333;
+  color: #fff;
+  padding: 80px 20px;
+  text-align: center;
+  }
+  
+  .contact-info h3 {
+  font-size: 24px;
+  margin: 0;
+  }
+  
+  .contact-info p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 20px auto;
+  max-width: 600px;
+  text-align: center;
+  }
+  
+  .contact-info ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  }
+  
+  .contact-info li {
+  margin: 10px 0;
+  }
+  
+  .contact-info i {
+  margin-right: 10px;
+  }
