--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,36 @@ main {
   right: 0;
   z-index: 1;
   }
+
+  header h1 {
+  font-size: 32px;
+  margin: 0;
+  }
+  
+  ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin-right: 10px;
+  padding: 0;
+  }
+  
+  nav li {
+  margin-left: 30px;
+  }
+  
+  nav li:first-child {
+  margin-left: 0;
+  }
+  
+  nav a {
+  color: #263131;
+  text-decoration: none;
+  }
+  
+  nav a:hover {
+  color: #f2f2f2;
+  }
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
