--- a/css/main.css
+++ b/css/main.css
@@ -2740,13 +2740,14 @@ body {
   
   .contact-info ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  align-items: center;
+  align-self: center;
   text-align: center;
   }
   
   .contact-info li {
   margin: 10px 0;
+  
   }
   
   .contact-info i {
