--- a/css/main.css
+++ b/css/main.css
@@ -35,14 +35,14 @@ main {
 }
 /* Styles for the header section */
   web-header {
-  background-color: rgba(255, 255, 255, 0);
-  color: #330a0c;
+  background-color: rgba(0, 0, 115, 100);
+  /*color: #330a0c;*/
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
-  position: fixed;
+  padding: 5px;
+  position: fixed;  
   top: 0;
   left: 0;
   right: 0;
@@ -52,7 +52,7 @@ main {
 
   web-header h1 {
   font-size: 48px;
-  margin: 6px;
+  margin: 0 0 0 10px;
   color: #eaf5f3;
   font-family: "Noto Sans TC";
   }
@@ -2681,7 +2681,7 @@ ul.breadcrumb li:last-child {
 
 body {
   /*  記得修改位置 */
-  background: url("/images/bg.jpg");
+  background: rgba(255, 255, 255, 0);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -2696,27 +2696,22 @@ body {
     }
     
     #services h2 {
-     text-shadow:
-      -1px -1px 0 #939ea7,
-      1px -1px 0 #939ea7,
-      -1px 1px 0 #939ea7,
-      1px 1px 0 #939ea7;   
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 20px;
     font-family: "Noto Sans TC";
-    color: #d2f7f5;
+    color: rgba(0,0,128,100);
     }
     
     #services p {
     font-size: 18px;
     line-height: 1.5;
-    color: #d2f7f5;
-    margin-bottom: 50px;
+    color: #020a0a;
+    margin-bottom: 0;
     font-family: "Noto Sans TC";
     }
     
-    #projects {
+  #projects {
     
     background-color: rgba(255, 255, 255, 0);
     padding: 50px;
@@ -2726,16 +2721,12 @@ body {
     }
     
     #projects h2 {
-    text-shadow:
-      -1px -1px 0 #939ea7,
-      1px -1px 0 #939ea7,
-      -1px 1px 0 #939ea7,
-      1px 1px 0 #939ea7; 
+    
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 20px;
     font-family: "Noto Sans TC";
-    color: #d2f7f5;
+    color: rgba(0,0,128,100);
     }
     
     .project {
@@ -2756,7 +2747,7 @@ body {
     .project p {
     font-size: 16px;
     line-height: 1.5;
-    color: #d2f7f5;
+    color: #020a0a;
     margin-bottom: 0;
     font-family: "Noto Sans TC";
     }
@@ -2766,139 +2757,52 @@ body {
     }
 /*  聯絡我們表單樣式 */
 #contact {
-  background-color: rgba(255, 255, 255, 0);
-  padding: 50px;
+  background-color: rgb(159, 173, 199,0.3);
+  padding: 10px;
   
 }
 
-#contact h2 {
-  text-shadow:
-    -1px -1px 0 #939ea7,
-    1px -1px 0 #939ea7,
-    -1px 1px 0 #939ea7,
-    1px 1px 0 #939ea7;
-  text-align: center;
-  font-size: 36px;
-  margin-bottom: 50px;
-  font-family: "Noto Sans TC";
-  color: #d2f7f5;
-}
 
-#contact form {
-  max-width: 600px;
-  margin: 0 auto;
-}
 
-#contact label {
-  color: #d2f7f5;
-  display: block;
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  font-family: "Noto Sans TC";
-}
-
-#contact input,
-#contact textarea {
-  padding: 10px;
-  font-size: 18px;
-  border: none;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-#contact textarea {
-  height: 150px;
-}
-
-#contact button {
-  background-color: #4CAF50;
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#contact button:hover {
-  background-color: #3e8e41;
-}
 
 .contact-info {
-  margin-top: 50px;
+  margin-top: 20px;
   text-align: center;
   background-color: rgb(159, 173, 199,0.3);
   
 }
 
-.contact-info h3 {
-  text-shadow:
-    -1px -1px 0 #939ea7,
-    1px -1px 0 #939ea7,
-    -1px 1px 0 #939ea7,
-    1px 1px 0 #939ea7;
-  font-size: 24px;
-<<<<<<< HEAD
-  margin: 0;
-  }
-  
-  .contact-info p {
-  font-size: 16px;
-  line-height: 1.5;
-  margin: 20px auto;
-  max-width: 600px;
-  text-align: center;
-  }
-  
-  .contact-info ul {
-  list-style: none;
-  align-items: center;
-  align-self: center;
-  text-align: center;
-  }
-  
-  .contact-info li {
-  margin: 10px 0;
-  
-  }
-=======
+#contact h3 {
+  font-size: 36px;
   font-weight: bold;
-  margin-bottom: 20px;
-  color: #d2f7f5;
+  font-family: "Noto Sans TC";
+  color: rgba(0,0,128,100);
+  text-align: center;
+  margin: 20px 0 20px 0;
 
 }
 
-.contact-info p {
-  font-size: 18px;
-  margin-bottom: 20px;
-  color: #d2f7f5;
 
-}
 
 .contact-info ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   display: inline-block;
+  text-align: left;
 }
 
 .contact-info li {
   font-size: 18px;
-  margin-bottom: 10px;
-  color: #d2f7f5;
+  margin-bottom: 5px;
+  color: #000000;
 
 }
 
 .contact-info i {
   margin-right: 10px;
-  color: #36394b;
+  color: #272d4b;
 }
 
   
->>>>>>> 2b40d1b3265856bfd8fb211714d658843d8a5c31
   
