--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,18 @@ web-header h1 {
   padding: 0;
   
   }
-  
+  @media screen and (max-width: 767px) {
+    /* 在宽度小于 767px 的屏幕上应用以下样式 */
+    web-header ul {
+      font-size: 4vw
+      display: flex;
+      flex-direction: row;
+      list-style: none;
+      margin-right: 2vw;
+      padding: 0;
+      /* 其他手机样式 */
+    }
+  }
   web-header nav li {
   margin-left: 30px;
   
