--- a/css/main.css
+++ b/css/main.css
@@ -2657,6 +2657,7 @@ body {
         line-height: 1.5;
         margin-bottom: 0;
         font-family: "Noto Sans TC";
+        color: #fff;
         }
         .project-overlay h3 {
           margin: 0;
@@ -2676,6 +2677,7 @@ body {
       margin: 0;
       font-size: 18px;
       font-family: "Noto Sans TC";
+      color: #fff;
     }
     
     .project:last-of-type {
