--- a/css/main.css
+++ b/css/main.css
@@ -2647,9 +2647,10 @@ body {
       }
       
       .project-overlay {
-        position: static;
-        background-color: transparent;
-        padding: 0;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        
       }
       .project-overlay p {
 
