--- a/css/main.css
+++ b/css/main.css
@@ -2667,21 +2667,22 @@ body {
         top: 0;
         left: 0;
         background-color: rgba(0, 0, 0, 0.5);
-        
       }
+      
       .project-overlay p {
-
         font-size: 5vw;
         line-height: 1.5;
         margin-bottom: 0;
         font-family: "Noto Sans TC";
         color: #fff;
-        }
-        .project-overlay h3 {
-          margin: 0;
-          font-size: 4vw;
-          font-family: "Noto Sans TC";
-        }
+      }
+      
+      .project-overlay h3 {
+        margin: 0;
+        font-size: 4vw;
+        font-family: "Noto Sans TC";
+        color: #fff;
+      }
     }
     .project-overlay p {
 
