--- a/css/main.css
+++ b/css/main.css
@@ -2670,6 +2670,7 @@ body {
       }
       
       .project-overlay p {
+        position: absolute;
         font-size: 5vw;
         line-height: 1.5;
         margin-bottom: 0;
